k8s/deployment-config-feature1.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: feature1
#  labels:
#    app: feature1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: feature1
#  template:
#    metadata:
#      labels:
#        app: feature1
#    spec:
#      containers:
#        - name: feature1
#          image: c3smonkey/monkey-mongo-service:feature1
#          ports:
#            - containerPort: 8080
#          env:
#            - name: SELECTOR
#              value: feature1
#            - name: MONGO_USERNAME
#              valueFrom:
#                secretKeyRef:
#                  key: database-user
#                  name: mongodb
#            - name: MONGO_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  key: database-password
#                  name: mongodb
#            - name: MONGO_DATABASE
#              valueFrom:
#                secretKeyRef:
#                  key: database-name
#                  name: mongodb
#triggers:
#  - type: "ConfigChange"
#  - type: "ImageChange"
#    imageChangeParams:
#      automatic: true
#      containerNames:
#        - "feature1"
#      from:
#        kind: "ImageStreamTag"
#        name: "monkey-mongo-service:feature1"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: feature1
#  labels:
#    app: feature1
#spec:
#  ports:
#    - port: 8080
#      protocol: TCP
#  selector:
#    app: feature1
#
#---
#apiVersion: v1
#kind: Route
#metadata:
#  name: feature1
#spec:
#  to:
#    kind: Service
#    name: feature1

---
#apiVersion: image.openshift.io/v1
#kind: ImageStream
#metadata:
#  annotations:
#    openshift.io/image.dockerRepositoryCheck: 2019-02-15T21:07:37Z
#  creationTimestamp: null
#  generation: 2
#  labels:
#    app: feature1
#    name: feature1
#  name: feature1
#spec:
#  lookupPolicy:
#    local: false
#  tags:
#    - annotations:
#        openshift.io/imported-from: c3smonkey/monkey-mongo-service:feature1
#      from:
#        kind: DockerImage
#        name: docker-registry.default.svc:5000/ab/feature1:feature1
#      generation: 2
#      importPolicy: {}
#      name: feature1
#      referencePolicy:
#        type: Source
#status:
#  dockerImageRepository: ""

#---
#apiVersion: image.openshift.io/v1
#kind: ImageStream
#metadata:
#  labels:
#    app: feature1
#    name: feature1
#  name: feature1
#spec:
#  lookupPolicy:
#    local: false
#  tags:
#    - annotations:
#        openshift.io/imported-from: c3smonkey/monkey-mongo-service:feature1
#      from:
#        kind: DockerImage
#        name: docker-registry.default.svc:5000/ab/feature1:feature1
#      generation: 2
#      importPolicy: {}
#      name: feature1
#      referencePolicy:
#        type: Source
#status:
#  dockerImageRepository: ""



kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "service-feature1"
spec:
  template:
    metadata:
      labels:
        name: "service-feature1"
    spec:
      containers:
        - name: "service-feature1"
          image: "c3smonkey/monkey-mongo-service:feature1"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  replicas: 1
  triggers:
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        containerNames:
          - "service-feature1"
        from:
          kind: "ImageStreamTag"
          name: "monkey-mongo-service:feature1"
  strategy:
    type: "Rolling"
  paused: false
  revisionHistoryLimit: 2
  minReadySeconds: 0

#---
##apiVersion: apps/v1
##kind: Deployment
##metadata:
##  name: feature1
##spec:
##  replicas: 1
##  selector:
##    matchLabels:
##      app: feature1
##  template:
##    metadata:
##      labels:
##        app: feature1
##    spec:
##      containers:
##        - name: feature1
##          image: c3smonkey/monkey-mongo-service:feature1
##          ports:
##            - containerPort: 8080
##          env:
##            - name: SELECTOR
##              value: feature1
##            - name: MONGO_USERNAME
##              valueFrom:
##                secretKeyRef:
##                  key: database-user
##                  name: mongodb
##            - name: MONGO_PASSWORD
##              valueFrom:
##                secretKeyRef:
##                  key: database-password
##                  name: mongodb
##            - name: MONGO_DATABASE
##              valueFrom:
##                secretKeyRef:
##                  key: database-name
##                  name: mongodb
##
##triggers:
##  - type: "ConfigChange"
##  - type: "ImageChange"
##    imageChangeParams:
##      automatic: true
##      containerNames:
##        - "feature1"
##      from:
##        kind: "ImageStreamTag"
##        name: "monkey-mongo-service:feature1"
##strategy:
##  type: "Rolling"
#
##---
##apiVersion: v1
##kind: Service
##metadata:
##  labels:
##    app: feature1
##    name: feature1
##  name: feature1
##spec:
##  ports:
##    - name: 8080-tcp
##      port: 8080
##      protocol: TCP
##      targetPort: 8080
##  selector:
##    app: feature1
##    deploymentconfig: feature1
##    name: feature1
##  sessionAffinity: None
##  type: ClusterIP
#
