k8s/deployment-feature1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature1
  labels:
    app: feature1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feature1
  template:
    metadata:
      labels:
        app: feature1
    spec:
      containers:
        - name: feature1
          image: c3smonkey/monkey-mongo-service:feature1
          ports:
            - containerPort: 8080
triggers:
  - type: "ConfigChange"
  - type: "ImageChange"
    imageChangeParams:
      automatic: true
      containerNames:
        - "feature1"
      from:
        kind: "ImageStreamTag"
        name: "monkey-mongo-service:feature1"
---
apiVersion: v1
kind: Service
metadata:
  name: feature1
  labels:
    app: feature1
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: feature1

---
apiVersion: v1
kind: Route
metadata:
  name: feature1
spec:
  to:
    kind: Service
    name: feature1
