k8s/deployment-route-feature1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-feature1
  labels:
    app: service-feature1
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: service-feature1

---
apiVersion: v1
kind: Route
metadata:
  name: service-feature1
spec:
  to:
    kind: Service
    name: service-feature1
